--- a/me.html
+++ b/me.html
@@ -25,7 +25,7 @@
 			<div class="by-user-nav-item-img fa fa-user-circle-o"></div>
 			<div class="by-user-nav-item-txt">我的支部</div>
 		</a>
-		<a href="" class="by-user-nav-item">
+		<a href="mysave.html" class="by-user-nav-item">
 			<div class="by-user-nav-item-img fa fa-list-alt"></div>
 			<div class="by-user-nav-item-txt">我的收藏</div>
 		</a>
